{
    "name": "GameplayInput",
    "maps": [
        {
            "name": "Actionable",
            "id": "494bf611-261d-40f4-9929-44185784d612",
            "actions": [
                {
                    "name": "Action1",
                    "type": "Button",
                    "id": "6a2397e4-6783-4d03-96a8-2f964171eccb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Action2",
                    "type": "Button",
                    "id": "ca1ebc1f-1c92-42e7-96d7-bbfc70d7a934",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aeeaa9d9-8970-4b50-9307-bc13ae465924",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55546c26-2f18-4f82-b8e0-ce717e6f4eca",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}